--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,7 @@
-/**
-* Template Name: MyResume
-* Updated: Nov 17 2023 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
  font-family: 'Prompt', sans-serif;
   color: #272829;
+  background-color: #181818;
 }
 
 a {
@@ -31,6 +21,12 @@ h4,
 h5,
 h6 {
   font-family: "Raleway", sans-serif;
+  color: #eee;
+}
+
+
+p {
+  color: #959191;
 }
 
 /*--------------------------------------------------------------
@@ -369,7 +365,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #45505b;
+  color: #aeb1b4;
 }
 
 .section-title h2::before {
@@ -396,6 +392,7 @@ section {
 
 .section-title p {
   margin-bottom: 0;
+  color: #555454;
 }
 
 /*--------------------------------------------------------------
@@ -404,7 +401,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #728394;
+  color: #c8c9ca;
 }
 
 .about .content ul {
@@ -416,6 +413,7 @@ section {
   margin-bottom: 20px;
   display: flex;
   align-items: center;
+  color: #666464;
 }
 
 .about .content ul strong {
@@ -492,7 +490,7 @@ section {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #45505b;
+  color: #aeb1b4;
 }
 
 .skills .progress .skill .val {
@@ -508,7 +506,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #0563bb;
+  background-color: #0455a0;
 }
 
 /*--------------------------------------------------------------
@@ -519,7 +517,7 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #45505b;
+  color: #9aa0a5;
 }
 
 .resume .resume-item {
@@ -541,7 +539,7 @@ section {
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #f7f8f9;
+  background: #1b1e21;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -554,6 +552,7 @@ section {
 
 .resume .resume-item ul li {
   padding-bottom: 10px;
+  color: #959191;
 }
 
 .resume .resume-item:last-child {
@@ -584,7 +583,7 @@ section {
   margin: 0 auto 25px auto;
   list-style: none;
   text-align: center;
-  background: #fff;
+  background: #2c2727;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -597,7 +596,7 @@ section {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #272829;
+  color: #d6d8da;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
@@ -797,7 +796,7 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
-.services .icon-box {
+/* .services .icon-box {
   text-align: center;
   padding: 70px 20px 80px 20px;
   transition: all ease-in-out 0.3s;
@@ -925,12 +924,12 @@ section {
 
 .services .iconbox-teal:hover .icon path {
   fill: #11dbcf;
-}
+} */
 
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
-.testimonials .section-header {
+/* .testimonials .section-header {
   margin-bottom: 40px;
 }
 
@@ -1008,14 +1007,13 @@ section {
   .testimonials .testimonial-item p {
     width: 80%;
   }
-}
+} */
 
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
 .contact .info {
   width: 100%;
-  background: #fff;
 }
 
 .contact .info i {
@@ -1061,7 +1059,6 @@ section {
 
 .contact .php-email-form {
   width: 100%;
-  background: #fff;
 }
 
 .contact .php-email-form .form-group {
@@ -1152,7 +1149,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #f7f8f9;
+  background: #090909;
   color: #45505b;
   font-size: 14px;
   text-align: center;
