--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,8 @@ p {
 
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(194, 186, 186, 0.8);
+  box-shadow: inset 50px 90px 90px 0 rgba(0, 0, 0, 0.1);
   position: absolute;
   bottom: 0;
   top: 0;
