--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,16 +73,32 @@ p {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #1f1d1d;
-
-}
-.load{
-  justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-
+  background: #fff;
 }
 
+#preloader:before {
+  content: "";
+  position: fixed;
+  top: calc(50% - 30px);
+  left: calc(50% - 30px);
+  border: 6px solid #0563bb;
+  border-top-color: #fff;
+  border-bottom-color: #fff;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: animate-preloader 1s linear infinite;
+}
+
+@keyframes animate-preloader {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 /*--------------------------------------------------------------
 # Disable aos animation delay on mobile devices
