--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,7 @@ p {
   transition: all 0.5s;
   padding: 15px;
   overflow-y: auto;
+  background: #45505b
 }
 
 @media (max-width: 991px) {
@@ -229,26 +230,35 @@ p {
 }
 
 /**
-* Mobile Navigation 
-*/
+* Mobile Navigation
+--------------------------------------------------------------*/
 .mobile-nav-toggle {
   position: fixed;
-  right: 10px;
-  top: 10px;
+  right: 15px;
+  top: 15px;
   z-index: 9998;
   border: 0;
   background: none;
-  font-size: 28px;
+  font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
-  line-height: 0;
+  line-height: 1;
   cursor: pointer;
-  border-radius: 50px;
-  padding: 5px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background: #fff; */
+  color: #0563bb;
+  border-radius: 50%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
-.mobile-nav-toggle i {
-  color: #45505b;
+@media (max-width: 991px) {
+  .mobile-nav-toggle {
+    display: flex;
+  }
 }
 
 .mobile-nav-active {
@@ -261,7 +271,7 @@ p {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #0563bb;
+  /* background: #0563bb; */
 }
 
 /*--------------------------------------------------------------
